Modal: position backdrop absolute instead of fixed to..
a) improve the scroll performance
b) prevent that touch/mousewheel scrolling doesn’t work in some cases
c) prevent that scrolling using the scrollbar closes the modal

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -6486,10 +6486,6 @@ footer {
   max-width: 460px;
 }
 
-.modal-backdrop {
-  position: fixed;
-}
-
 .modal-content {
   border-radius: 0;
   border: 1px solid hsl(0,0%,90%);
